--- a/startup_namer/android/app/src/main/AndroidManifest.xml
+++ b/startup_namer/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="startup_namer"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Hivemind"
+        android:icon="@mipmap/logo">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
