--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "license": "ISC",
     "dependencies": {
         "@sendgrid/mail": "^7.2.6",
+        "@types/js-cookie": "^2.2.6",
+        "@types/jsonwebtoken": "^8.5.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "js-cookie": "^2.2.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.3",
         "mongoose": "^5.11.1",
