--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "express": "^4.17.1",
         "js-cookie": "^2.2.1",
         "jsonwebtoken": "^8.5.1",
+        "md5": "^2.3.0",
         "mongodb": "^3.6.3",
         "mongoose": "^5.11.1",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "universal-cookie": "^4.0.4"
     }
 }
