--- a/startup_namer/pubspec.yaml
+++ b/startup_namer/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   fluttertoast:
   localstorage: ^3.0.0
   shared_preferences: 0.5.12
-
+  crypto: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
